<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">

<LinearLayout
      android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >
      
      <TextView android:id="@+id/name"
  android:layout_marginLeft="5dp"
  android:layout_marginTop="5dp"
  android:textSize="16sp"
  android:textStyle="bold"
  android:textColor="#FFFF00"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:text="@string/LCD1"/>
<TextView android:id="@+id/line1"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginLeft="15dp"
  android:text="@string/line2"/>
<TextView android:id="@+id/line2"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginLeft="15dp"
  android:text="@string/line2"/>
</LinearLayout>

<ImageView android:id="@+id/lcdicon" android:layout_width="72dp"
      android:contentDescription="@string/icon_desc"
    android:layout_height="wrap_content"
    android:icon="@drawable/ic_menu_lcd"
    android:layout_alignParentRight="true" 
        android:layout_marginTop="5dp" />
</RelativeLayout>